--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@ const MANIFEST = {
       "50": { image: "row/15/50/nObjects=15_triplet=50_0.png", json: "row/15/50/attn_patches_nObjects=15_triplet=50_0.json" }
     },
     just_number: {
-      "5":  { image: "just_number/15/5/nObjects=15_triplet=5_0.png",  json: "just_number/15/5/attn_patches_nObjects=15_triplet=5_0.json" },
-      "10": { image: "just_number/15/10/nObjects=15_triplet=10_0.png", json: "just_number/15/10/attn_patches_nObjects=15_triplet=10_0.json" },
-      "20": { image: "just_number/15/20/nObjects=15_triplet=20_0.png", json: "just_number/15/20/attn_patches_nObjects=15_triplet=20_0.json" },
-      "35": { image: "just_number/15/35/nObjects=15_triplet=35_0.png", json: "just_number/15/35/attn_patches_nObjects=15_triplet=35_0.json" },
-      "45": { image: "just_number/15/45/nObjects=15_triplet=45_0.png", json: "just_number/15/45/attn_patches_nObjects=15_triplet=45_0.json" },
-      "50": { image: "just_number/15/50/nObjects=15_triplet=50_0.png", json: "just_number/15/50/attn_patches_nObjects=15_triplet=50_0.json" }
+      "5":  { image: "./just_number/15/5/nObjects=15_triplet=5_0.png",  json: "just_number/15/5/attn_patches_nObjects=15_triplet=5_0.json" },
+      "10": { image: "./just_number/15/10/nObjects=15_triplet=10_0.png", json: "just_number/15/10/attn_patches_nObjects=15_triplet=10_0.json" },
+      "20": { image: "./just_number/15/20/nObjects=15_triplet=20_0.png", json: "just_number/15/20/attn_patches_nObjects=15_triplet=20_0.json" },
+      "35": { image: "./just_number/15/35/nObjects=15_triplet=35_0.png", json: "just_number/15/35/attn_patches_nObjects=15_triplet=35_0.json" },
+      "45": { image: "./just_number/15/45/nObjects=15_triplet=45_0.png", json: "just_number/15/45/attn_patches_nObjects=15_triplet=45_0.json" },
+      "50": { image: "./just_number/15/50/nObjects=15_triplet=50_0.png", json: "just_number/15/50/attn_patches_nObjects=15_triplet=50_0.json" }
     },
     just_scan: {
       "5":  { image: "just_scan/15/5/nObjects=15_triplet=5_0.png",  json: "just_scan/15/5/attn_patches_nObjects=15_triplet=5_0.json" },
