--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   select,option{font-size:14px}
   .error{color:#b00020;white-space:pre-wrap}
 </style>
+<!-- pako برای باز کردن .gz -->
+<script src="https://cdn.jsdelivr.net/npm/pako@2.1.0/dist/pako.min.js"></script>
 </head>
 <body>
   <h1>Value-only Attention Viewer</h1>
@@ -58,15 +60,10 @@
 <script>
 /* ============================
    1) EMBEDDED MANIFEST (EDIT!)
-   ----------------------------
-   - Paths are RELATIVE to this HTML file.
-   - Use forward slashes.
-   - Make sure the JSON files are actually present in the repo
-     (GitHub Pages can't fetch Git LFS pointers unless they're served).
 ============================ */
 const MANIFEST = {
   datasets: ["row", "just_number", "just_scan", "simple"],
-  triplet_ids: ["5","10","20","35","45","50"], // <-- edit if needed
+  triplet_ids: ["5","10","20","35","45","50"],
   entries: {
     row: {
       "5":  { image: "row/15/5/nObjects=15_triplet=5_0.png",  json: "row/15/5/attn_patches_nObjects=15_triplet=5_0.json" },
@@ -77,12 +74,12 @@ const MANIFEST = {
       "50": { image: "row/15/50/nObjects=15_triplet=50_0.png", json: "row/15/50/attn_patches_nObjects=15_triplet=50_0.json" }
     },
     just_number: {
-      "5":  { image: "./just_number/15/5/nObjects=15_triplet=5_0.png",  json: "just_number/15/5/attn_patches_nObjects=15_triplet=5_0.json" },
-      "10": { image: "./just_number/15/10/nObjects=15_triplet=10_0.png", json: "just_number/15/10/attn_patches_nObjects=15_triplet=10_0.json" },
-      "20": { image: "./just_number/15/20/nObjects=15_triplet=20_0.png", json: "just_number/15/20/attn_patches_nObjects=15_triplet=20_0.json" },
-      "35": { image: "./just_number/15/35/nObjects=15_triplet=35_0.png", json: "just_number/15/35/attn_patches_nObjects=15_triplet=35_0.json" },
-      "45": { image: "./just_number/15/45/nObjects=15_triplet=45_0.png", json: "just_number/15/45/attn_patches_nObjects=15_triplet=45_0.json" },
-      "50": { image: "./just_number/15/50/nObjects=15_triplet=50_0.png", json: "just_number/15/50/attn_patches_nObjects=15_triplet=50_0.json" }
+      "5":  { image: "just_number/15/5/nObjects=15_triplet=5_0.png",  json: "just_number/15/5/attn_patches_nObjects=15_triplet=5_0.json" },
+      "10": { image: "just_number/15/10/nObjects=15_triplet=10_0.png", json: "just_number/15/10/attn_patches_nObjects=15_triplet=10_0.json" },
+      "20": { image: "just_number/15/20/nObjects=15_triplet=20_0.png", json: "just_number/15/20/attn_patches_nObjects=15_triplet=20_0.json" },
+      "35": { image: "just_number/15/35/nObjects=15_triplet=35_0.png", json: "just_number/15/35/attn_patches_nObjects=15_triplet=35_0.json" },
+      "45": { image: "just_number/15/45/nObjects=15_triplet=45_0.png", json: "just_number/15/45/attn_patches_nObjects=15_triplet=45_0.json" },
+      "50": { image: "just_number/15/50/nObjects=15_triplet=50_0.png", json: "just_number/15/50/attn_patches_nObjects=15_triplet=50_0.json" }
     },
     just_scan: {
       "5":  { image: "just_scan/15/5/nObjects=15_triplet=5_0.png",  json: "just_scan/15/5/attn_patches_nObjects=15_triplet=5_0.json" },
@@ -106,8 +103,10 @@ const MANIFEST = {
 };
 
 /* ============================
-   2) SMALL HELPERS
+   2) HELPERS (paths, fetch)
 ============================ */
+const BRANCH = "main"; // اگر برنچ اصلی‌ات چیز دیگری است، این را تغییر بده
+
 function normalizeToken(s){return (s||"").toLowerCase().replace(/[^a-z0-9\-]+/g,"");}
 function parsePairsFromGeneratedText(raw){
   if(!raw) return [];
@@ -166,13 +165,53 @@ function nanmeanVectors(vecs){
   for(let i=0;i<P;i++) out[i]=cnt[i]?out[i]/cnt[i]:NaN;
   return out;
 }
-function makeUrl(p){ return new URL((p||"").replace(/\\/g,"/"), document.baseURI).toString(); }
+function makeAbsUrl(rel){ return new URL((rel||"").replace(/\\/g,"/"), document.baseURI).toString(); }
+function buildRawUrl(rel){
+  const host = location.hostname;                  // username.github.io
+  const user = host.split(".")[0];                 // username
+  const parts = location.pathname.split("/").filter(Boolean);
+  const repo  = parts[0] || "";                    // repo name
+  const path  = (rel||"").replace(/^\.\//,"");
+  return `https://raw.githubusercontent.com/${user}/${repo}/${BRANCH}/${path}`;
+}
+async function fetchJsonSmart(relPath){
+  // 1) .gz کنار JSON (سریع‌ترین)
+  // 2) خود JSON
+  // 3) فالبک raw.githubusercontent.com
+  const urls = [];
+  if (relPath.endsWith(".json")) {
+    urls.push(makeAbsUrl(relPath + ".gz"));
+    urls.push(makeAbsUrl(relPath.replace(/\.json$/, ".json.gz")));
+  }
+  urls.push(makeAbsUrl(relPath));
+  if (relPath.endsWith(".json")) {
+    urls.push(buildRawUrl(relPath + ".gz"));
+    urls.push(buildRawUrl(relPath));
+  }
+
+  let lastErr=null;
+  for (const u of urls) {
+    try {
+      const r = await fetch(u);          // کش مرورگر فعال است
+      if (!r.ok) throw new Error(`HTTP ${r.status} @ ${u}`);
+      if (u.endsWith(".gz")) {
+        const buf = new Uint8Array(await r.arrayBuffer());
+        const txt = new TextDecoder().decode(pako.ungzip(buf));
+        return JSON.parse(txt);
+      } else {
+        const txt = await r.text();
+        if (/^<!doctype/i.test(txt)) throw new Error(`HTML instead of JSON @ ${u}`);
+        return JSON.parse(txt);
+      }
+    } catch(e){ lastErr=e; console.warn("[fetchJsonSmart]", e.message); }
+  }
+  throw new Error(`Failed to load JSON after tries:\n- ${urls.join("\n- ")}\nLast error: ${lastErr?.message||lastErr}`);
+}
 
 /* ============================
    3) SMOOTH OVERLAY (no grid)
 ============================ */
-function hsl2rgb(h,s,l){ // h[0..360], s/l[0..100]
-  h/=360; s/=100; l/=100; const a=s*Math.min(l,1-l);
+function hsl2rgb(h,s,l){h/=360; s/=100; l/=100; const a=s*Math.min(l,1-l);
   const f=n=>{const k=(n+h*12)%12; const c=l - a*Math.max(-1,Math.min(k-3,9-k,1)); return Math.round(255*c);};
   return [f(0),f(8),f(4)];
 }
@@ -184,11 +223,9 @@ async function drawSmoothOverlay(canvas, baseImgEl, grid, gh, gw, opts={}){
   const CW = Math.round(W*scale), CH = Math.round(H*scale);
   canvas.width = CW; canvas.height = CH;
 
-  // 1) draw base image
   ctx.clearRect(0,0,CW,CH);
   ctx.drawImage(baseImgEl, 0, 0, CW, CH);
 
-  // 2) paint small heatmap (gw×gh) then upscale smoothly
   const off = document.createElement('canvas'); off.width = gw; off.height = gh;
   const octx = off.getContext('2d');
   const imgData = octx.createImageData(gw, gh);
@@ -236,17 +273,11 @@ async function render(){
     const entry = (MANIFEST.entries[ds]||{})[imgK];
     if(!entry){ tilesDiv.className='error'; tilesDiv.textContent="No entry for this dataset/image selection."; return; }
 
-    // base image
     const base = document.getElementById("base");
-    base.src = makeUrl(entry.image);
+    base.src = makeAbsUrl(entry.image);
 
-    // load JSON (robust parse; detect HTML/404)
-    const jsonUrl = makeUrl(entry.json);
-    const resp = await fetch(jsonUrl, { cache: "no-store" });
-    const txt  = await resp.text();
-    if (!resp.ok) throw new Error(`HTTP ${resp.status} @ ${jsonUrl}`);
-    if (txt.trim().startsWith("<!DOCTYPE")) throw new Error(`Got HTML instead of JSON (wrong path?): ${jsonUrl}`);
-    let data; try { data = JSON.parse(txt); } catch(e){ throw new Error(`Invalid JSON @ ${jsonUrl}: ${e.message}`); }
+    // — اینجا نسخه‌ی سریع و مقاوم برای بارگذاری JSON —
+    const data = await fetchJsonSmart(entry.json);
 
     const gen_text = data.generated_text || "";
     const per_token = data.per_token || {};
@@ -256,17 +287,14 @@ async function render(){
     const {tokens, tpl} = orderedTokensAndLayers(per_token);
     const tokNorm = tokens.map(normalizeToken);
 
-    // infer patches
     const first = tpl[0] || {}; let maxPatch=-1;
     for (const k of Object.keys(first)) { if (k.startsWith("patch")) { const idx = parseInt(k.slice(5),10); if(Number.isFinite(idx)) maxPatch = Math.max(maxPatch, idx); } }
     const P = maxPatch + 1; if(!(P>0)){ tilesDiv.className='error'; tilesDiv.textContent="Could not infer #patches from JSON."; return; }
 
-    // wait image for width/height
     await new Promise(ok => { if (base.complete) return ok(); base.onload=ok; base.onerror=ok; });
     const {gh:GH, gw:GW} = inferGrid(P, base.naturalWidth, base.naturalHeight);
     const layerKey = "layer"+String(L0+1);
 
-    // cache vectors
     const cache = new Map();
     const getVec = (ti) => {
       const key = (ti<<5) + L0;
@@ -274,7 +302,6 @@ async function render(){
       return cache.get(key);
     };
 
-    // tiles
     let pos = 0, idxPair = 0;
     for (const [shape, color] of pairs) {
       idxPair++;
