--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div id="tiles"></div>
 
 <script>
-const TILES_BASE = "./static_tiles";  // folder with manifest.json + tiles
+const TILES_BASE = ".";  // folder with manifest.json + tiles
 let MANI = null;
 
 function byNumericKeys(obj){ return Object.keys(obj).sort((a,b)=>Number(a)-Number(b)); }
